Fix overflowing text in some sizes

--- a/cmap-2019-theme/src/css/clay/bootstrap/_grid.scss
+++ b/cmap-2019-theme/src/css/clay/bootstrap/_grid.scss
@@ -67,4 +67,6 @@
 
 .row{
   width: 100%;
+  margin-left:0;
+  margin-right:0;
 }
