--- a/cmap-2019-theme/src/css/custom/widgets/_signup-form.scss
+++ b/cmap-2019-theme/src/css/custom/widgets/_signup-form.scss
@@ -1,6 +1,8 @@
 section[id^="portlet_constant_contact_sign_up"] {
 	background: #88a0b2;
 	padding: 26px 13px;
+	margin-left: -12px;
+	margin-right: -12px;
 	
 	.contol-label{
 		@media (max-width: 768px) {
